little spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,7 @@ a:hover {
   display: inline-block;
   grid-row: 3;
   grid-column: 2;
+  margin-right: 1rem;
 }
 .vehicle__old-price{
   color: var(--clr-primary-light);
